# debts

./: .gitignore  Setup.hs  debts.cabal  readme.md  run_tests.sh  test-examples.sh  todo
src/: .Print.hs.swp  Aggregation.hs  Balance.hs  BasicTypes.hs  CommandLine.hs  CommonCalculationLog.hs  Date.hs  Debt.hs  Fx.hs  InputBuilder.hs  Lexer.x  Main.hs  Money.hs  MoneyLog.hs  Normalize.hs  Option.hs  Param.hs  Parser.y  ParserMonad.hs  Postprocess.hs  Postprocessing.hs  Preprocess.hs  Print.hs  PrintTable.hs  Process.hs  Result.hs  Round.hs  Side.hs  SpendingsBy.hs  SplitSide.hs  Syntaxer.hs  Syntaxer.info  Syntaxer.y  Transaction.hs  Utils.hs
testsuite/tests/: AggregationTest.hs  BalanceTest.hs  CommandLineTest.hs  DebtTest.hs  FxTest.hs  LexerTest.hs  MoneyLogTest.hs  MoneyTest.hs  NormalizeTest.hs  ParamTest.hs  ParserTest.hs  ParserTests.hs  PreprocessTest.hs  PrintTableTest.hs  RoundTest.hs  RunTests.hs  TestUtils.hs  TransactionTest.hs  UtilsTest.hs
