Name:               debts
Version:            0.1
Description:        Debt calculator
License:            GPL
Author:             Anton Lavrov
Maintainer:         lavrov.anton@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.8
Extra-source-files: testsute/test/RunTests.hs

Executable debts
  Main-is:          Main.hs
  Build-Depends:    base, array, containers, MissingH
  --Build-Depends:    base, array, containers
  Hs-Source-Dirs:   src
  Other-Modules:    Aggregation CommandLine Date Debt Fx Lexer Main Money Param Postprocessing Parser Transaction Utils

Test-Suite unit-tests
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   testsuite/tests src dist/build/debts/debts-tmp
  Build-Depends:    base, array, HUnit
  Main-Is:          RunTests.hs
