Name:               debts
Version:            0.1
Description:        Debt calculator
License:            GPL
Author:             Anton Lavrov
Maintainer:         lavrov.anton@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.10

Executable debts
  Main-is:          Main.hs
  Build-Depends:    base, array, containers, MissingH
  Hs-Source-Dirs:   src
  Other-Modules:    Lexer Parser
  build-tools: alex, happy
  Default-Language: Haskell98

Test-Suite tests
  Main-Is:          RunTests.hs
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   testsuite/tests src dist/build
  Build-Depends:    base, array, containers, HUnit, MissingH
  Other-Modules:    Lexer Parser
  Default-Language: Haskell98
