Name:               debts
Version:            0.1
Description:        Debt calculator
License:            GPL
Author:             Anton Lavrov
Maintainer:         lavrov.anton@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.10

Executable debts
  Main-is:          Main.hs
  Build-Depends:    base, array, containers, MissingH
  Build-Tools:      alex, happy
  Hs-Source-Dirs:   src
  Other-Modules:    Aggregation, Balance BasicTypes, CommandLine, CommonCalculationLog, Fx, InputBuilder, Lexer, Money, MoneyLog, Normalize, Param, Parser, ParserMonad, Postprocess, Preprocess, Print, PrintTable, Process, Result, Round, Side, SplitSide, SpendingsBy, Transaction, Utils
  Default-Language: Haskell98

Test-Suite tests
  Main-Is:          RunTests.hs
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   testsuite/tests src dist/build
  Build-Depends:    base, array, containers, HUnit, MissingH
  Other-Modules:    Aggregation, Balance BasicTypes, CommandLine, CommonCalculationLog, Fx, InputBuilder, Lexer, Money, MoneyLog, Normalize, Param, Parser, ParserMonad, Postprocess, Preprocess, Print, PrintTable, Process, Result, Round, Side, SplitSide, SpendingsBy, Transaction, Utils
                    AggregationTest, BalanceTest, CommandLineTest, FxTest, LexerTest, MoneyLogTest, MoneyTest, NormalizeTest, ParamTest, ParserTest, PreprocessTest, PrintTableTest, RoundTest, UtilsTest, TestUtils
  Default-Language: Haskell98
